libhid ChangeLog
================

2005-09-02  Charles Lepple (clepple+libhid@ghz.cc)
  - Added hid_interrupt_write() and hid_set_idle() functions. [256]
  - Added usb_strerror() calls to most of the hid_exchange functions to aid in
    debugging. [256]
  - Fixed dependencies on SWIG bindings [255]
  - Patched hidparser with fix applied to NUT (affects APC UPSes) [254]
  - Misc changes to extract_report_descriptor [251],[253]

2005-07-07  Charles Lepple (clepple+libhid@ghz.cc)
  - Removed hardcoded reference to Python 2.3 and /usr/include. Pointed out by
    Martin Dengler, and patch suggested by Martin Krafft. SVN changeset: [244]
  - Fixed "sed lstat" error when compiling with distcc on OS X. [245]
  - Mark last parameter in hid_os_force_claim() as unused. [246], [247]

2005-04-26  Martin F. Krafft (libhid@pobox.madduck.net)
  - Fixed a bug in hid_exchange.c, which would prevent input record reading.
    Thanks to Benson Wang <chungyehwang@gmail.com> for pointing this out.
  - Added a new docbook.xsl path thanks to Martin Dengler
    <phidgets@xades.com>.

2005-04-19  Martin F. Krafft (libhid@pobox.madduck.net)
  - Fixed a bug in hid_preparation.c, which hardcoded the HID USB interface to
    0. Thanks to Benson Wang <chungyehwang@gmail.com> for pointing this out.

2005-04-11  Eoin Verling <everling@snet.wit.ie>
  - Implemented hid_interrupt_read, a wrapper of usb_interrupt_read.

2005-02-25  Martin F. Krafft (libhid@pobox.madduck.net)
  - Added $PATH-style docbook stylesheet autodetection, inspired by Kevin
    Godby. Thanks, Kevin!

2005-02-20  Martin F. Krafft (libhid@pobox.madduck.net)
  - Removed dependency on libswigpy, which is deprecated.
  - integrated more patches by Andreas Jochens <aj@andaco.de> to fix
    compilation issues with gcc 4. Thanks, Andreas!

2004-11-10  Martin F. Krafft (libhid@pobox.madduck.net)

  - integrated patch by Andreas Jochens <aj@andaco.de> to fix compilation
    issues on 64bit machines (amd64 specifically). Thanks, Andreas!
